Fix width on mobile

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ main {
 
 @media (max-width: 480px) {
     main {
-        width: 100%;
+        width: 80%;
     }
 }
 
